--- a/src/assets/scss/vars/default/_default.scss
+++ b/src/assets/scss/vars/default/_default.scss
@@ -54,12 +54,12 @@
 }
 
 @font-face {
-  font-family: "Potra";
   font-display: swap;
-  src: local("Potra"),
-  url(https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/Potra.woff2) format("woff2"),
-  url(https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/Potra.ttf) format("truetype");
-  font-weight: 400
+  font-family: "Wall Poet";
+  src: local("Wall Poet"),
+  url(https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/cyber-monday-2018/Wallpoet-Regular.ttf);
+  font-weight: normal;
+
 }
 
 
