--- a/src/partials/commons/head.html
+++ b/src/partials/commons/head.html
@@ -1,25 +1,25 @@
 <meta charset="UTF-8">
-<title>Ofertas de Viaje Black Friday 2018</title>
+<title>Ofertas de Viaje Cyber Monday 2018</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="shortcut icon" href="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/favicon.ico"/>
-<meta name="title" content="Ofertas de Viaje Black Friday 2018">
-<meta name="description" content="Descubre las mejores ofertas de viajes para Black Friday. Tu Black Friday con los mejores viajes al Caribe, Circuitos por Europa y grandes viajes. ¡No dejes pasar estos precios!">
-<link rel="stylesheet" href="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/main.css">
+<meta name="title" content="Ofertas de Viaje Cyber Monday 2018">
+<meta name="description" content="Descubre las mejores ofertas de viajes para Cyber Monday. Tu Cyber Monday con los mejores viajes al Caribe, Circuitos por Europa y grandes viajes. ¡No dejes pasar estos precios!">
+<link rel="stylesheet" href="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/cyber-monday-2018/main.css">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <meta property="og:type" content="website">
-<meta property="og:title" content="Black Friday - Apaga tu rutina con estas ofertas únicas">
-<meta property="og:description" content="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet ">
-<meta property="og:url" content="https://iberojet.es/paginas/black-friday/">
+<meta property="og:title" content="Cyber Monday">
+<meta property="og:description" content="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escape el Cyber Monday!">
+<meta property="og:url" content="https://iberojet.es/paginas/cyber-monday/">
 <meta property="og:site_name" content="Iberojet">
-<meta property="og:image" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/bf-share.png">
-<meta property="og:image:secure_url" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/bf-share.png">
+<meta property="og:image" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/cyber-monday-2018/cb-share.png">
+<meta property="og:image:secure_url" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/cyber-monday-2018/cb-share.png">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="400">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:description" content="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet ">
-<meta name="twitter:title" content="Black Friday - Apaga tu rutina con estas ofertas únicas">
+<meta name="twitter:description" content="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escape el Cyber Monday!">
+<meta name="twitter:title" content="Cyber Monday">
 <meta name="twitter:site" content="@iberojet">
-<meta name="twitter:image" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/bf-share.png">
+<meta name="twitter:image" content="https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/cyber-monday-2018/cb-share.png">
 <meta name="twitter:creator" content="@iberojet">
 
