--- a/src/partials/components/bf/bf-product-caribbean.html
+++ b/src/partials/components/bf/bf-product-caribbean.html
@@ -1,19 +1,18 @@
 <div class="bf-product">
     <div class="bf-media">
         <picture>
-            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(65):max_age(2604800):format(webp)/s3/dam/photos/37/66/f5/dd/9434d063051d7cd324329ff340fc64110309bee95a42dc5710a4db86.jpg"
-                    type="image/webp">
-            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(65):max_age(2604800)/s3/dam/photos/37/66/f5/dd/9434d063051d7cd324329ff340fc64110309bee95a42dc5710a4db86.jpg">
+            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(65):max_age(2604800):format(webp)/s3/dam/photos/65/c7/53/84/b9a27a6364b7bb78c7d6c87d3b3967f6fc4f89cd90ab9470cefb90ee.jpg" type="image/webp">
+            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(65):max_age(2604800)/s3/dam/photos/65/c7/53/84/b9a27a6364b7bb78c7d6c87d3b3967f6fc4f89cd90ab9470cefb90ee.jpg">
         </picture>
     </div>
 
     <div class="bf-offer-list">
         <div class="bf-heading">
             <div class="bf-heading__hashtag">
-                #TuBlackFridayIberojet
+                ¡ÚNICO DIA DE VENTA¡
             </div>
             <div class="bf-heading__text">
-                Apaga tu rutina y enciende las mejores ofertas del Black Friday.
+                Aprovecha esta oportunidad y compra con nuestras ofertas especiales del Cyber Monday
             </div>
         </div>
         <div class="bf-offer-list__inner">
@@ -27,7 +26,7 @@
                         <div class="bf-offer__value">790 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Punta Cana" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-punta-cana"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Punta Cana" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-punta-cana"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -40,7 +39,7 @@
                     {{> bf-social
                         id="puntaCana"
                         link="https://www.iberojet.es/viajes-caribe/ofertas-punta-cana"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                        text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -52,7 +51,7 @@
                         <div class="bf-offer__value">802 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Habana/Varadero" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-habana-varadero"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Habana/Varadero" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-habana-varadero"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -65,7 +64,7 @@
                     {{> bf-social
                             id="habanaVaradero"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-habana-varadero"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -77,7 +76,7 @@
                         <div class="bf-offer__value">760 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Riviera Maya" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-riviera-maya"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Riviera Maya" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-riviera-maya"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -90,7 +89,7 @@
                     {{> bf-social
                             id="rivieraMaya"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-riviera-maya"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -103,7 +102,7 @@
                         <div class="bf-offer__value">1.085 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Jamaica" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-jamaica"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Jamaica" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-jamaica"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -116,7 +115,7 @@
                     {{> bf-social
                             id="jamaica"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-jamaica"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
