--- a/src/partials/components/bf/bf-product-new.html
+++ b/src/partials/components/bf/bf-product-new.html
@@ -1,18 +1,17 @@
 <div class="bf-product">
     <div class="bf-media">
         <picture>
-            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/74/2e/40/34/f2a94a475fac855a50b8faa30ed858a82f92da2298924a2de94f3367.jpg"
-                    type="image/webp">
-            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/74/2e/40/34/f2a94a475fac855a50b8faa30ed858a82f92da2298924a2de94f3367.jpg">
+            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/85/14/30/ee/8137c2704758bbd705326a2514065b622d691177e1f4a13e96baf281.jpg" type="image/webp">
+            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/85/14/30/ee/8137c2704758bbd705326a2514065b622d691177e1f4a13e96baf281.jpg">
         </picture>
     </div>
     <div class="bf-offer-list">
         <div class="bf-heading">
             <div class="bf-heading__hashtag">
-                #TuBlackFridayIberojet
+                ¡ÚNICO DIA DE VENTA¡
             </div>
             <div class="bf-heading__text">
-                Apaga tu rutina y enciende las mejores ofertas del Black Friday del Verano 2019.
+                Aprovecha esta oportunidad y compra con nuestras ofertas especiales del Cyber Monday
             </div>
         </div>
         <div class="bf-offer-list__inner">
@@ -24,7 +23,7 @@
                         <div class="bf-offer__value">2.355 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Kenia" class="bf-button" href="https://www.iberojet.es/viajes-kenia"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Kenia" class="bf-button" href="https://www.iberojet.es/viajes-kenia"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -37,7 +36,7 @@
                     {{> bf-social
                             id="kenia"
                             link="https://www.iberojet.es/viajes-kenia"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -51,7 +50,7 @@
                         <div class="bf-offer__value">1.483 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Zanzíbar" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-zanzibar"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Zanzíbar" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-zanzibar"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -64,7 +63,7 @@
                     {{> bf-social
                             id="zanzibar"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-zanzibar"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -76,7 +75,7 @@
                         <div class="bf-offer__value">1.289 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Maldivas" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-islas-maldivas"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Maldivas" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-islas-maldivas"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -89,7 +88,7 @@
                     {{> bf-social
                             id="maldivas"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-islas-maldivas"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -102,7 +101,7 @@
                         <div class="bf-offer__value">1.042 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Mauricio" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-isla-mauricio"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Mauricio" class="bf-button" href="https://www.iberojet.es/viajes-caribe/ofertas-isla-mauricio"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -115,7 +114,7 @@
                     {{> bf-social
                             id="mauricio"
                             link="https://www.iberojet.es/viajes-caribe/ofertas-isla-mauricio"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
