--- a/src/partials/components/bf/bf-product-tours.html
+++ b/src/partials/components/bf/bf-product-tours.html
@@ -1,20 +1,20 @@
 <div class="bf-product">
     <div class="bf-media">
         <picture>
-            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/e2/de/fe/46/1c2913e7672dfbacba4525977e3166195c0c1c18c4ca725bc322beed.jpg"
-                    type="image/webp">
-            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/e2/de/fe/46/1c2913e7672dfbacba4525977e3166195c0c1c18c4ca725bc322beed.jpg">
+            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/78/57/be/80/4a1e1028bd4776fc2829f59a621a8e799f2584a46963c0ad035abb10.jpg" type="image/webp">
+            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/78/57/be/80/4a1e1028bd4776fc2829f59a621a8e799f2584a46963c0ad035abb10.jpg">
         </picture>
     </div>
+
     <div class="bf-offer-list">
         <div class="bf-heading">
             <div class="bf-heading__hashtag">
-                #TuBlackFridayIberojet
+                ¡ÚNICO DIA DE VENTA¡
             </div>
             <div class="bf-heading__text">
-                Apaga tu rutina y enciende las mejores ofertas del Black Friday del Verano 2019.
+                Aprovecha esta oportunidad y compra con nuestras ofertas especiales del Cyber Monday
             </div>
-            <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Ver todos los circuitos"  href="https://www.iberojet.es/viajes-europa/c" target="_blank" class="bf-heading__more">
+            <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Ver todos los circuitos"  href="https://www.iberojet.es/viajes-europa/c" target="_blank" class="bf-heading__more">
                 Ver todos los circuitos por Europa
             </a>
         </div>
@@ -32,7 +32,7 @@
                         <div class="bf-offer__value">1.200 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Fiordos Noruegos" class="bf-button" href="https://www.iberojet.es/viajes-noruega" target="_blank">
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Fiordos Noruegos" class="bf-button" href="https://www.iberojet.es/viajes-noruega" target="_blank">
                             Ver oferta
                         </a>
                     </div>
@@ -44,7 +44,7 @@
                     {{> bf-social
                             id="fiordos"
                             link="https://www.iberojet.es/viajes-noruega"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -56,7 +56,7 @@
                         <div class="bf-offer__value">844 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Alemania" class="bf-button" href="https://www.iberojet.es/viajes-alemania" target="_blank">
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Alemania" class="bf-button" href="https://www.iberojet.es/viajes-alemania" target="_blank">
                             Ver oferta
                         </a>
                     </div>
@@ -68,7 +68,7 @@
                     {{> bf-social
                             id="alemania"
                             link="https://www.iberojet.es/viajes-alemania"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         <div class="bf-offer__value">810 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Italia" class="bf-button" href="https://www.iberojet.es/viajes-italia" target="_blank">
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Italia" class="bf-button" href="https://www.iberojet.es/viajes-italia" target="_blank">
                             Ver oferta
                         </a>
                     </div>
@@ -92,7 +92,7 @@
                     {{> bf-social
                             id="italia"
                             link="https://www.iberojet.es/viajes-italia"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <div class="bf-offer__value">812 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Francia" class="bf-button" href="https://www.iberojet.es/viajes-francia" target="_blank">
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Circuitos por Francia" class="bf-button" href="https://www.iberojet.es/viajes-francia" target="_blank">
                             Ver oferta
                         </a>
                     </div>
@@ -116,7 +116,7 @@
                     {{> bf-social
                             id="francia"
                             link="https://www.iberojet.es/viajes-francia"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
