--- a/src/partials/components/bf/bf-social.html
+++ b/src/partials/components/bf/bf-social.html
@@ -6,7 +6,7 @@
 {{/ifeq}}
 
 <div class="bf-social" id="{{id}}" data-share-link="{{link}}" data-share-text="{{text}}">
-    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Compartir" data-gtm-lblevent="Twitter - {{id}}" data-social="twitter" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--twitter">
+    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Compartir" data-gtm-lblevent="Twitter - {{id}}" data-social="twitter" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--twitter">
         <svg width="99px" height="84px" viewBox="0 0 99 84" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="ico-twitter" transform="translate(-1.000000, -7.000000)" fill="#000000">
@@ -17,7 +17,7 @@
             </g>
         </svg>
     </a>
-    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Compartir" data-gtm-lblevent="Facebook - {{id}}" data-social="facebook" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--facebook">
+    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Compartir" data-gtm-lblevent="Facebook - {{id}}" data-social="facebook" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--facebook">
         <svg width="50px" height="96px" viewBox="0 0 50 96" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="ico-facebook" transform="translate(-25.000000, -1.000000)" fill="#000000">
@@ -28,7 +28,7 @@
             </g>
         </svg>
     </a>
-    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Compartir" data-gtm-lblevent="Linkedin - {{id}}" data-social="linkedin" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--linkedin">
+    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Compartir" data-gtm-lblevent="Linkedin - {{id}}" data-social="linkedin" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--linkedin">
         <svg width="98px" height="91px" viewBox="0 0 98 91" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="ico-linkedin" transform="translate(-1.000000, -8.000000)" fill="#000000">
@@ -43,7 +43,7 @@
             </g>
         </svg>
     </a>
-    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Compartir" data-gtm-lblevent="Google - {{id}}" data-social="google" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--google">
+    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Compartir" data-gtm-lblevent="Google - {{id}}" data-social="google" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--google">
         <svg width="98px" height="64px" viewBox="0 0 98 64" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="ico-google-plus" transform="translate(-1.000000, -17.000000)" fill="#000000">
@@ -57,7 +57,7 @@
             </g>
         </svg>
     </a>
-    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Compartir" data-gtm-lblevent="Whatsapp - {{id}}" data-social="whatsapp" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--whatsapp">
+    <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Compartir" data-gtm-lblevent="Whatsapp - {{id}}" data-social="whatsapp" data-social-target="{{id}}" class="social_share_trigger bf-social__icon bf-social__icon--whatsapp">
         <svg width="98px" height="99px" viewBox="0 0 98 99" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g  stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="shareWhatsapp" transform="translate(-1.000000, 0.000000)" fill="#000000">
