--- a/src/assets/scss/bf/bf-product.scss
+++ b/src/assets/scss/bf/bf-product.scss
@@ -59,7 +59,7 @@
     padding: 1vw 1vw 1vw 30vw;
   }
   @media (max-width: 991px){
-    background: #000;
+    background: linear-gradient(-180deg, rgba(0, 104, 221, 0) 0%, rgba(3, 60, 131, 0.88) 0%, #02184B 43%);
 
     transform: none;
     top: auto;
@@ -110,9 +110,9 @@
   &__title{
     font-size: 30px;
     line-height: 36px;
-    color: #F4B6D1;
+    color: #00F8FC;
     text-transform: uppercase;
-    text-shadow: 0 0 10px #e5077e, 0 0 30px #e5077e, 0 0 30px #e5077e, 0 0 40px #e5077e, 0 0 20px #e5077e, 0 0 80px #e5077e, 0 0 10px #e5077e, 0 0 10px #e5077e;
+    font-family: "Wall Poet", sans-serif;
     margin-bottom: 16px;
     font-weight: 300;
     @media (max-width: 480px){
@@ -189,6 +189,7 @@
   margin-bottom: 64px;
   @media (max-width: 400px){
     margin-bottom: 32px;
+    margin-top: 32px;
   }
   &__more{
     display: block;
@@ -197,7 +198,7 @@
     margin-top: 5px;
   }
   &__hashtag{
-    color: #EF426F;
+    color: #00F8FC;
     font-size: 17px;
     font-weight: 700;
     line-height: 21px;
