--- a/src/assets/scss/bf/bf-time-left.scss
+++ b/src/assets/scss/bf/bf-time-left.scss
@@ -2,7 +2,8 @@
   position: fixed;
   z-index: 1;
   bottom: 0;
-  background: url(https://d1hkxmgwhmmdhs.cloudfront.net/dist/assets/img/iberojet/black-friday-2018/blackFridayLanding.png) center top/cover no-repeat;
+  opacity: 0.79;
+  background-image: linear-gradient(-180deg, rgba(0,104,221,0.00) 0%, rgba(3,60,131,0.88) 0%, #02184B 43%);
   height: 135px;
   width: 100%;
 
@@ -16,8 +17,9 @@
     height: auto;
     bottom: auto;
     top: 0;
-    background: #000;
+    //background: #000;
     padding: 16px;
+    opacity: 1;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -92,8 +94,10 @@
       }
     }
     .bf-bullet{
+      /*
       width: 60px;
       height: 60px;
+      */
       margin-left: 16px;
       &__text{
         font-size: 14px;
