--- a/src/partials/components/bf/bf-product-big-travels.html
+++ b/src/partials/components/bf/bf-product-big-travels.html
@@ -1,19 +1,18 @@
 <div class="bf-product">
     <div class="bf-media">
         <picture>
-            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/ef/e1/69/62/13f8ff1e1968d70337789b592d2c7f4debb022f8d38d789b0c100616.jpg"
-                    type="image/webp">
-            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/ef/e1/69/62/13f8ff1e1968d70337789b592d2c7f4debb022f8d38d789b0c100616.jpg">
+            <source data-srcset="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800):format(webp)/s3/dam/photos/ee/4b/54/9a/d312577df35368509bd342b03d3c56dd6340406e47abd162452445ce.jpg" type="image/webp">
+            <img class="lazyload" data-src="https://d2l4159s3q6ni.cloudfront.net/resize/1366x685/filters:quality(55):max_age(2604800)/s3/dam/photos/ee/4b/54/9a/d312577df35368509bd342b03d3c56dd6340406e47abd162452445ce.jpg">
         </picture>
     </div>
 
     <div class="bf-offer-list">
         <div class="bf-heading">
             <div class="bf-heading__hashtag">
-                #TuBlackFridayIberojet
+                ¡ÚNICO DIA DE VENTA¡
             </div>
             <div class="bf-heading__text">
-                Apaga tu rutina y enciende las mejores ofertas del Black Friday del Verano 2019.
+                Aprovecha esta oportunidad y compra con nuestras ofertas especiales del Cyber Monday
             </div>
         </div>
         <div class="bf-offer-list__inner">
@@ -27,7 +26,7 @@
                         <div class="bf-offer__value">980 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Tailandia" class="bf-button" href="https://www.iberojet.es/viajes-tailandia"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Tailandia" class="bf-button" href="https://www.iberojet.es/viajes-tailandia"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -40,7 +39,7 @@
                     {{> bf-social
                             id="tailandia"
                             link="https://www.iberojet.es/viajes-tailandia"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -52,7 +51,7 @@
                         <div class="bf-offer__value">1.113 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Costa Rica" class="bf-button" href="https://www.iberojet.es/viajes-costa-rica"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - Costa Rica" class="bf-button" href="https://www.iberojet.es/viajes-costa-rica"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -65,7 +64,7 @@
                     {{> bf-social
                             id="costaRica"
                             link="https://www.iberojet.es/viajes-costa-rica"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -77,7 +76,7 @@
                         <div class="bf-offer__value">1.439 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - China" class="bf-button" href="https://www.iberojet.es/viajes-china"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - China" class="bf-button" href="https://www.iberojet.es/viajes-china"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -90,7 +89,7 @@
                     {{> bf-social
                             id="china"
                             link="https://www.iberojet.es/viajes-china"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
@@ -103,7 +102,7 @@
                         <div class="bf-offer__value">1.072 €</div>
                     </div>
                     <div class="bf-offer__button">
-                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Black Friday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - India" class="bf-button" href="https://www.iberojet.es/viajes-india"
+                        <a data-gtm-activation="basicEvent" data-gtm-event="eventoGA" data-gtm-listener="click" data-gtm-catevent="Cyber Monday" data-gtm-actevent="Ofertas" data-gtm-lblevent="Destino - India" class="bf-button" href="https://www.iberojet.es/viajes-india"
                            target="_blank">
                             Ver oferta
                         </a>
@@ -116,7 +115,7 @@
                     {{> bf-social
                             id="india"
                             link="https://www.iberojet.es/viajes-india"
-                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te escapen! #TuBlackFridayIberojet"
+                            text="Descubre las mejores ofertas en #Iberojet. ¡Qué no se te espace el Cyber Monday!"
                     }}
                 </div>
             </div>
